<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="48sp"
        android:layout_margin="20dp"
        android:textColor="#03F"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_desc"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_below="@id/main"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/scoringTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:text="@string/scoring_title"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/scoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoringTitle"
        android:text="@string/scoring"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/startGameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game_text"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_below="@id/scoring"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:scaleType="center"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_send" />

</RelativeLayout>